--- a/.github/ISSUE_TEMPLATE/2.Feature_request.md
+++ b/.github/ISSUE_TEMPLATE/2.Feature_request.md
@@ -6,7 +6,7 @@ labels: enhancement
 
 # Feature request
 
-## Is your feature request related to a problem? Please describe.
+## Is your feature request related to a problem? Please describe
 
 A clear and concise description of what you want and what your use case is.
 
@@ -16,7 +16,8 @@ A clear and concise description of what you want to happen.
 
 ## Describe alternatives you've considered
 
-A clear and concise description of any alternative solutions or features you've considered.
+A clear and concise description of any alternative solutions or features you've
+considered.
 
 ## Additional context
 
