--- a/.github/ISSUE_TEMPLATE/1.Bug_report.md
+++ b/.github/ISSUE_TEMPLATE/1.Bug_report.md
@@ -21,11 +21,11 @@ Steps to reproduce the behavior, please provide code snippets or a repository:
 
 ## Expected behavior
 
-A clear and concise description of what you expected to happen.
+A clear and concise description of what expected to happen.
 
 ## Screenshots
 
-If applicable, add screenshots to help explain your problem.
+If applicable, add screenshots to help explain the problem.
 
 ## System information
 
