--- a/.github/ISSUE_TEMPLATE/2.Feature_request.md
+++ b/.github/ISSUE_TEMPLATE/2.Feature_request.md
@@ -6,17 +6,17 @@ labels: enhancement
 
 # Feature request
 
-## Is your feature request related to a problem? Please describe
+## Is the feature request related to a problem? Please describe
 
-A clear and concise description of what you want and what your use case is.
+A clear and concise description of what is wanted and what the use case is.
 
-## Describe the solution you'd like
+## Describe the solution
 
-A clear and concise description of what you want to happen.
+A clear and concise description of what is wanted to happen.
 
-## Describe alternatives you've considered
+## Describe alternatives considered
 
-A clear and concise description of any alternative solutions or features you've
+A clear and concise description of any alternative solutions or features
 considered.
 
 ## Additional context
