feat: remove oauth2 and users.json

--- a/.github/ISSUE_TEMPLATE/3.Improve_docs.md
+++ b/.github/ISSUE_TEMPLATE/3.Improve_docs.md
@@ -20,4 +20,4 @@ A clear and concise description of the improvement.
 
 ## Additional context
 
-Add any other context or screenshots that help clarify your question.
+Add any other context or screenshots that help clarify the question.
